# cmake-skeleton

./: CMake.HOWTO  CMakeLists.txt  Doxyfile.cmake  INSTALL.md  README  README.md
cmake/: FindThirdPartyLibrary.cmake  InstallCMakeConfigFiles.cmake  ProjectConfig.cmake.in
src/: CMakeLists.txt
src/ProjectName/: CMakeLists.txt
src/YourProjectName/: CMakeLists.txt
src/YourProjectName/dummy/: CMakeLists.txt  DummyClass.cpp  DummyClass.hpp
src/YourProjectName/second_dummy/: CMakeLists.txt  SecondDummyClass.cpp  SecondDummyClass.hpp
src/test/: CMakeLists.txt
src/test/dummy/: CMakeLists.txt  main.cpp
src/test/second_dummy/: CMakeLists.txt  main.cpp
